RESOLVED FIXED129754
JSObject::fastGetOwnPropertySlot does a slow check for OverridesGetOwnPropertySlot
https://bugs.webkit.org/show_bug.cgi?id=129754
Summary JSObject::fastGetOwnPropertySlot does a slow check for OverridesGetOwnPropert...
Mark Hahnenberg
Reported 2014-03-05 13:19:56 PST
It should just use the InlineTypeFlags in JSCell.
Attachments
Patch (4.06 KB, patch)
2014-03-05 13:21 PST, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-03-05 13:21:05 PST
Geoffrey Garen
Comment 2 2014-03-05 13:26:31 PST
Comment on attachment 225907 [details] Patch r=me Is speedup?
Mark Hahnenberg
Comment 3 2014-03-05 18:54:11 PST
(In reply to comment #2) > (From update of attachment 225907 [details]) > r=me > > Is speedup? Doesn't affect any of the usual benchmarks, although that's not surprising since we didn't see a regression from it after 32-bit structures.
WebKit Commit Bot
Comment 4 2014-03-05 19:14:56 PST
Comment on attachment 225907 [details] Patch Clearing flags on attachment: 225907 Committed r165164: <http://trac.webkit.org/changeset/165164>
WebKit Commit Bot
Comment 5 2014-03-05 19:15:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.