JSObject::fastGetOwnPropertySlot does a slow check for OverridesGetOwnPropertySlot https://bugs.webkit.org/show_bug.cgi?id=129754

Reviewed by Geoffrey Garen.

InlineTypeFlags are stored in JSCell, so we can just load those instead of going through the TypeInfo.

* runtime/JSCell.h:
(JSC::JSCell::inlineTypeFlags):
* runtime/JSObject.h:
(JSC::JSObject::fastGetOwnPropertySlot):
* runtime/JSTypeInfo.h:
(JSC::TypeInfo::TypeInfo):
(JSC::TypeInfo::overridesGetOwnPropertySlot):


Canonical link: https://commits.webkit.org/147811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165164 268f45cc-cd09-0410-ab3c-d52691b4dbfc